tests/paczka1/small_fuzzy/74387071.err
Error in line 4: 8NbdOh6 S276 18,8
Error in line 8: CpMq3YN1Bhl S920 72,0
